Saltos de linea

--- a/index.html
+++ b/index.html
@@ -159,15 +159,15 @@
 					C&oacute;digo Javascript
 				</div>
 				<div class="code-content">
-					var SRC = "http://www.dinosoria.com/tiger/tigre_sumatracc01.jpg";
-					var NOMBRE = "Ramon"
-					var nota = document.body.getElementsByClassName("nota")[0];
-					var foto = nota.getElementsByTagName("img")[0];
-					foto.src = SRC;
-					var pie = nota.getElementsByTagName("a")[2];
-					pie.innerHTML = NOMBRE + " visita el Departamento de Computaci&oacute;n!";
-					var texto = nota.getElementsByTagName("a")[6];
-					texto.innerHTML = NOMBRE + " visit&oacute; la Semana de la Computaci&oacute;n y le encant&oacute;! :D";
+					var SRC = "http://www.dinosoria.com/tiger/tigre_sumatracc01.jpg";</br>
+					var NOMBRE = "Ramon"</br>
+					var nota = document.body.getElementsByClassName("nota")[0];</br>
+					var foto = nota.getElementsByTagName("img")[0];</br>
+					foto.src = SRC;</br>
+					var pie = nota.getElementsByTagName("a")[2];</br>
+					pie.innerHTML = NOMBRE + " visita el Departamento de Computaci&oacute;n!";</br>
+					var texto = nota.getElementsByTagName("a")[6];</br>
+					texto.innerHTML = NOMBRE + " visit&oacute; la Semana de la Computaci&oacute;n y le encant&oacute;! :D";</br>
 				</div>
 
 			</div>
@@ -188,12 +188,11 @@
 					C&oacute;digo Javascript
 				</div>
 				<div class="code-content">
-					var SRC = "Voy a estudiar computacion!";
-
-					var conv_window = document.getElementsByClassName("conversation")[0];
-					var conversations = conv_window.getElementsByClassName("_5wd4 _1nc7 direction_ltr _5yt9 _2cnu");
-					var last_conversation = conversations[conversations.length-1];
-					last_conversation.getElementsByTagName("span")[1].innerHTML = SRC;
+					var SRC = "Voy a estudiar computacion!"; </br>
+					var conv_window = document.getElementsByClassName("conversation")[0];</br>
+					var conversations = conv_window.getElementsByClassName("_5wd4 _1nc7 direction_ltr _5yt9 _2cnu");</br>
+					var last_conversation = conversations[conversations.length-1];</br>
+					last_conversation.getElementsByTagName("span")[1].innerHTML = SRC;</br>
 				</div>
 
 			</div>
