--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 						<div class="code-content">
 							Atari breakout</br>
 							Do a barrell roll</br>
-							zerg rush</br>
+							Zerg rush</br>
 							the answer to life the universe and everything
 
 						</div>
@@ -513,6 +513,7 @@
 						</div>
 					</div>
 				</div>
+				Para descubrir un poco m&aacute;s <a href="url">http://elgoog.im/</a>
 			</div>
 		</div>
 
