--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
 	#welcome {
 		margin-left: auto;
 		margin-right: auto;
-		width: 600px;
+		width: 784px;
 		font-size: 300%;
 		text-align: center;
 		font-family:arial;
 		font-weight:bold;
+		height: 100vw;
 	}
 
 	#empezar_button {
@@ -100,6 +101,10 @@
 		padding:13px 24px;
 		text-decoration:none;
 		text-shadow:0px 1px 0px #000000;
+
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 0px;
 	}
 	#empezar_button:hover {
 		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
@@ -168,7 +173,7 @@
 	}
 
 	.entry-wrapper {
-		width: 100vw; /* 90% of viewport vidth */
+		width: 99vw; /* 90% of viewport vidth */
 		height: 100vw; /* ratio = 9/16 * 90 = 50.625 */
 	}
 
@@ -188,6 +193,12 @@
   		text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
 	}
 
+	#titulo {
+		margin-left: auto;
+		margin-right: auto;
+		width: 780px;
+	}
+
 </style>
 
 <script type="text/javascript">
@@ -203,9 +214,9 @@
             .addClass( feedback.vertical )
             .addClass( feedback.horizontal )
             .appendTo( this );
-        }
-      }
-    });
+        	}
+      	}
+    	});
 
 		$("#empezar_button").click(function() {
 			$('html, body').animate({
@@ -259,13 +270,9 @@
 </header>
 
 <body>
-	<img id="logo" src="logo_dc.jpg">
 	<div id="welcome">
-		<p>
-		<div align="center">
-			<img src="imgs/titulo.png" style="width:784px;height:210px"></br>
-		</div>
-		</p>
+		<img id="logo" src="logo_dc.jpg">
+		<img src="imgs/titulo.png">
 		<p id="empezar_button">
 			&#161;Empezar!
 		</p>
