--- a/index.html
+++ b/index.html
@@ -247,6 +247,49 @@
 		margin-left: 15%;
 	}
 
+	#manos_button {
+		-moz-box-shadow:inset 0px 1px 0px 0px #276873;
+		-webkit-box-shadow:inset 0px 1px 0px 0px #276873;
+		box-shadow:inset 0px 1px 0px 0px #276873;
+		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
+		background:-moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
+		background:-webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
+		background:-o-linear-gradient(top, #599bb3 5%, #408c99 100%);
+		background:-ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
+		background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99',GradientType=0);
+		background-color:#599bb3;
+		-moz-border-radius:6px;
+		-webkit-border-radius:6px;
+		border-radius:6px;
+		border:1px solid #798a86;
+		display:inline-block;
+		cursor:pointer;
+		color:#ffffff;
+		font-family:arial;
+		font-size:200%;
+		font-weight:bold;
+		padding:13px 24px;
+		text-decoration:none;
+		text-shadow:0px 1px 0px #000000;
+
+	    margin-left: auto;
+	    margin-right: auto;
+	}
+	#manos_button:hover {
+		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
+		background:-moz-linear-gradient(top, #408c99 5%, #599bb3 100%);
+		background:-webkit-linear-gradient(top, #408c99 5%, #599bb3 100%);
+		background:-o-linear-gradient(top, #408c99 5%, #599bb3 100%);
+		background:-ms-linear-gradient(top, #408c99 5%, #599bb3 100%);
+		background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
+		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#408c99', endColorstr='#599bb3',GradientType=0);
+		background-color:#408c99;
+	}
+	#manos_button:active {
+		position:relative;
+		
+
 </style>
 
 <script type="text/javascript">
@@ -271,6 +314,12 @@
 			    scrollTop: $("#entry-inicio").offset().top
 			}, 1000);
 		});
+		$("#manos_button").click(function() {
+			$('html, body').animate({
+			    scrollTop: $("#entry-howto").offset().top
+			}, 1000);
+		});
+
 		$("#footer-inicio").click(function() {
 			$('html, body').animate({
 			    scrollTop: $("#entry-volador").offset().top
@@ -311,6 +360,7 @@
 			    scrollTop: $("#entry-extras").offset().top
 			}, 1000);
 		});
+		entry-howto
 	});
 
 </script>
@@ -353,6 +403,11 @@
 				</p>
 			</div>
 			<p>
+		</div>
+		<div align="center">
+			<p id="manos_button">
+				&#161;Manos a la obra!
+			</p>
 		</div>
 	</div>
 	
