--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 	  		</div>
 	  		<div style="float:left; width: 45%; height: 50px;"> </div>
 	  		<div style="float:left;">
-		  		<span class="intro_title">&iquest;Qu&eacute; es una web dinamica?</span>
+		  		<span class="intro_title">&iquest;Qu&eacute; es una web din&aacute;mica?</span>
 	  			<div class="bubble">
 	  				<p style="padding: 10px;">
 						Una p&aacute;gina web din&aacute;mica es aquella que incorpora efectos como texto que aparece y desaparece, animaciones, acciones que se activan al pulsar botones y ventanas con mensajes de aviso al usuario.
