Cambiado logo de jpg a png

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 
 <body>
 	<div id="welcome">
-		<img id="logo" src="logo_dc.jpg">
+		<img id="logo" src="logo_dc.png">
 		<img id="welcome_message" src="imgs/titulo.png">
 		<div id="button_wrapper">
 			<p id="inicio_button">
