--- a/index.html
+++ b/index.html
@@ -370,9 +370,10 @@
                             + "DI[i].style.position=\"static\";\n" 
                         + "}\n"
                     + "}; void(0)");
-		var client = new ZeroClipboard($("#copy-volador"));
-		client.on( "ready", function( readyEvent ) {
-		  client.on( "aftercopy", function( event ) {
+
+		var copy_volador_client = new ZeroClipboard($("#copy-volador"));
+		copy_volador_client.on( "ready", function( readyEvent ) {
+		  copy_volador_client.on( "aftercopy", function( event ) {
 		    alert("Copied text to clipboard: " + event.data["text/plain"] );
 		  });
 		});
