--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 <header>
+	<meta charset="UTF-8">
 	<link rel="stylesheet" href="jquery-ui/jquery-ui.css">
 	<script src="jquery-ui/external/jquery/jquery.js"></script>
 	<script src="jquery-ui/jquery-ui.js"></script>
