--- a/index.html
+++ b/index.html
@@ -3,352 +3,12 @@
 <header>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="jquery-ui/jquery-ui.css">
+	<link rel="stylesheet" href="style.css">
 	<script src="jquery-ui/external/jquery/jquery.js"></script>
 	<script src="jquery-ui/jquery-ui.js"></script>
 	<script type="text/javascript" src="ZeroClipboard.js"></script>
 	<script type="text/javascript" src="clipboard.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
-<style>
-	/*Tooltip*/
-	.ui-tooltip, .arrow:after {
-		background: black;
-		border: 2px solid white;
-	}
-	.ui-tooltip {
-		padding: 10px 20px;
-		color: white;
-		border-radius: 20px;
-		font: bold 14px "Helvetica Neue", Sans-Serif;
-		box-shadow: 0 0 7px black;
-	}
-	.arrow {
-		width: 70px;
-		height: 16px;
-		overflow: hidden;
-		position: absolute;
-		left: 50%;
-		margin-left: -35px;
-		bottom: -16px;
-	}
-	.arrow.top {
-		top: -16px;
-		bottom: auto;
-	}
-	.arrow.left {
-		left: 20%;
-	}
-	.arrow:after {
-		content: "";
-		position: absolute;
-		left: 20px;
-		top: -20px;
-		width: 25px;
-		height: 25px;
-		box-shadow: 6px 5px 9px -9px black;
-		-webkit-transform: rotate(45deg);
-		-ms-transform: rotate(45deg);
-		transform: rotate(45deg);
-	}
-	.arrow.top:after {
-		bottom: -20px;
-		top: auto;
-	}
-
-	.boxed {
-  		border: 5px solid gray;
-  		padding:10px;
-    	font-size:120%;
-	}
-
-	#logo {
-		width: 500px;
-		height: 200px;
-		margin-left: auto;
-		margin-right: auto;
-		display: block;
-	}
-
-	/*Inicio*/
-	#welcome {
-		margin-left: auto;
-		margin-right: auto;
-		width: 99vw;
-		font-size: 300%;
-		text-align: center;
-		font-family:arial;
-		font-weight:bold;
-		height: 100vw;
-	}
-
-	#inicio_button {
-		-moz-box-shadow:inset 0px 1px 0px 0px #276873;
-		-webkit-box-shadow:inset 0px 1px 0px 0px #276873;
-		box-shadow:inset 0px 1px 0px 0px #276873;
-		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
-		background:-moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
-		background:-webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
-		background:-o-linear-gradient(top, #599bb3 5%, #408c99 100%);
-		background:-ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
-		background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99',GradientType=0);
-		background-color:#599bb3;
-		-moz-border-radius:6px;
-		-webkit-border-radius:6px;
-		border-radius:6px;
-		border:1px solid #798a86;
-		display:inline-block;
-		cursor:pointer;
-		color:#ffffff;
-		font-family:arial;
-		font-size:100%;
-		font-weight:bold;
-		padding:13px 24px;
-		text-decoration:none;
-		text-shadow:0px 1px 0px #000000;
-
-	    margin-left: auto;
-	    margin-right: auto;
-	}
-	#inicio_button:hover {
-		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
-		background:-moz-linear-gradient(top, #408c99 5%, #599bb3 100%);
-		background:-webkit-linear-gradient(top, #408c99 5%, #599bb3 100%);
-		background:-o-linear-gradient(top, #408c99 5%, #599bb3 100%);
-		background:-ms-linear-gradient(top, #408c99 5%, #599bb3 100%);
-		background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
-		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#408c99', endColorstr='#599bb3',GradientType=0);
-		background-color:#408c99;
-	}
-	#inicio_button:active {
-		position:relative;
-		top:1px;
-	}
-
-	#empezar_button {
-		-moz-box-shadow:inset 0px 1px 0px 0px #276873;
-		-webkit-box-shadow:inset 0px 1px 0px 0px #276873;
-		box-shadow:inset 0px 1px 0px 0px #276873;
-		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
-		background:-moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
-		background:-webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
-		background:-o-linear-gradient(top, #599bb3 5%, #408c99 100%);
-		background:-ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
-		background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99',GradientType=0);
-		background-color:#599bb3;
-		-moz-border-radius:6px;
-		-webkit-border-radius:6px;
-		border-radius:6px;
-		border:1px solid #798a86;
-		display:inline-block;
-		cursor:pointer;
-		color:#ffffff;
-		font-family:arial;
-		font-size:100%;
-		font-weight:bold;
-		padding:13px 24px;
-		text-decoration:none;
-		text-shadow:0px 1px 0px #000000;
-
-	    margin-left: auto;
-	    margin-right: auto;
-	}
-	#empezar_button:hover {
-		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
-		background:-moz-linear-gradient(top, #408c99 5%, #599bb3 100%);
-		background:-webkit-linear-gradient(top, #408c99 5%, #599bb3 100%);
-		background:-o-linear-gradient(top, #408c99 5%, #599bb3 100%);
-		background:-ms-linear-gradient(top, #408c99 5%, #599bb3 100%);
-		background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
-		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#408c99', endColorstr='#599bb3',GradientType=0);
-		background-color:#408c99;
-	}
-	#empezar_button:active {
-		position:relative;
-		top:1px;
-	}
-
-	.codigo {
-		background-color: #eee;
-	}
-	.pagina {
-		height: 400px;
-		width: 800px;
-	}
-
-	.code {
-		width: auto;
-		border:1px solid #990033;
-
-	}
-
-	.code-header {
-		font-weight: bold;
-		color: #FFFFFF;
-		background-color: #990033;
-		text-align: center;
-		padding: 2px;
-	}
-
-	.code-content {
-		padding: 10px;
-		background-color: white;
-	}
-
-	.code-copy-button {
-		font-weight: bold;
-		color: #FFFFFF;
-		background-color: #990033;
-		text-align: center;
-		padding: 5px;
-		border: none;
-		width: 100%;
-		cursor:pointer;
-	}
-
-	.entry-header {
-		margin: 20px;
-		
-		color: #d12d2f;
-		font-family: 'PT Sans', cursive;
-		font-size: 40px;
-		font-weight: bold;
-		letter-spacing: -2px;
-		text-transform: uppercase;
-		text-shadow: 1px 1px 0px #fff;
-	}
-
-	.new-entry {
-		width: 700px;
-		border:2px dotted #D4DFE6;
-		background-color: #ECF8FF;
-		margin-left: auto;
-		margin-right: auto;
-		margin-bottom: 50px
-	}
-
-	.content {
-		margin: 20px;
-	}
-
-	.entry-wrapper {
-		width: 99vw; /* 90% of viewport vidth */
-		height: 100vw; /* ratio = 9/16 * 90 = 50.625 */
-	}
-
-	.footer {
-		font-weight: bold;
-		color: #FFFFFF;
-		background-color: #990033;
-		text-align: center;
-		padding-top: 10px;
-		padding-bottom: 10px;
-		cursor:pointer;
-	}
-	
-	.h1 {
-  		font: 400 100px/1.3 'Oleo Script', Helvetica, sans-serif;
-  		color: #2b2b2b;
-  		text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
-	}
-
-	#titulo {
-		margin-left: auto;
-		margin-right: auto;
-		width: 780px;
-	}
-
-	#button_wrapper {
-		position:absolute;
-		bottom: 0px;
-		width: 99%;
-	}
-
-	#welcome_message {
-		margin-top: 5%;
-	}
-
-	.intro_title {
-		font-family: 'Handlee', cursive;
-		font-size: 300%;
-	}
-
-	.bubble {
-		box-shadow: 0px 0px 6px #B2B2B2;
-		position: relative;
-		width: 500px;
-		padding: 0px;
-		background: #F9F9FB;
-		-webkit-border-radius: 10px;
-		-moz-border-radius: 10px;
-		border-radius: 10px;
-		border-width: 5px;
-		border-color: black;
-		font-size: 120%;
-	}
-
-	.bubble:after 
-	{
-		content: '';
-		position: absolute;
-		border-style: solid;
-		border-width: 0 19px 15px;
-		border-color: #F9F9FB transparent;
-		display: block;
-		width: 0;
-		z-index: 1;
-		margin-left: -19px;
-		top: -15px;
-		left: 21%;
-	}
-
-	.dialogues {
-		margin-left: 15%;
-	}
-
-	#manos_button {
-		-moz-box-shadow:inset 0px 1px 0px 0px #276873;
-		-webkit-box-shadow:inset 0px 1px 0px 0px #276873;
-		box-shadow:inset 0px 1px 0px 0px #276873;
-		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
-		background:-moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
-		background:-webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
-		background:-o-linear-gradient(top, #599bb3 5%, #408c99 100%);
-		background:-ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
-		background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99',GradientType=0);
-		background-color:#599bb3;
-		-moz-border-radius:6px;
-		-webkit-border-radius:6px;
-		border-radius:6px;
-		border:1px solid #798a86;
-		display:inline-block;
-		cursor:pointer;
-		color:#ffffff;
-		font-family:arial;
-		font-size:200%;
-		font-weight:bold;
-		padding:13px 24px;
-		text-decoration:none;
-		text-shadow:0px 1px 0px #000000;
-
-	    margin-left: auto;
-	    margin-right: auto;
-	}
-	#manos_button:hover {
-		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
-		background:-moz-linear-gradient(top, #408c99 5%, #599bb3 100%);
-		background:-webkit-linear-gradient(top, #408c99 5%, #599bb3 100%);
-		background:-o-linear-gradient(top, #408c99 5%, #599bb3 100%);
-		background:-ms-linear-gradient(top, #408c99 5%, #599bb3 100%);
-		background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
-		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#408c99', endColorstr='#599bb3',GradientType=0);
-		background-color:#408c99;
-	}
-	#manos_button:active {
-		position:relative;
-	}
-</style>
 
 <script type="text/javascript">
 	$(document).ready(function() {
