--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <header>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="jquery-ui/jquery-ui.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<script src="jquery-ui/external/jquery/jquery.js"></script>
 	<script src="jquery-ui/jquery-ui.js"></script>
 	<script type="text/javascript" src="ZeroClipboard.js"></script>
