Arreglados saltos de linea en entrada gravity

--- a/index.html
+++ b/index.html
@@ -232,7 +232,10 @@
 							C&oacute;digo Javascript
 						</div>
 						<div class="code-content">
-							var script = document.createElement("script"); script.src="https://gravityscript.googlecode.com/svn/trunk/gravityscript.js"; document.body.appendChild(script);void(0);
+							var script = document.createElement("script");<br>
+							script.src="https://gravityscript.googlecode.com/svn/trunk/gravityscript.js";<br>
+							document.body.appendChild(script);<br>
+							void(0);<br>
 						</div>
 						<div class="code-footer">
 							<button class="code-copy-button" id="copy-gravity" data-clipboard-text="Copy Me!">Copiar al portapapeles</button>
