Cambiado dialogo del modal

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 		<div id="copied-dialog" title="Copiado">
 		  <p>
 		    <span class="ui-icon ui-icon-clipboard" style="float:left; margin:0 7px 50px 0;"></span>
-		    El código se ha copiado en el portapapeles, ve y pruébalo en la consola!
+		    El código se copió correctamente, ¡ahora pegalo en la consola!
 		  </p>
 		</div>
 
