--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
 						<button class="code-copy-button" id="copy-volador" data-clipboard-text="Copy Me!">Copiar al portapapeles</button>
 					</div>
 				</div>
+				<div class="copied" id="copied-volador" style="display: none;">
+					El código se copió correctamente, ¡ahora pegalo en la consola!
+				</div>
+
 			</div>
 			<div class="footer" id="footer-volador">
 				Siguiente
@@ -147,6 +151,9 @@
 						<button class="code-copy-button" id="copy-noticias" data-clipboard-text="Copy Me!">Copiar al portapapeles</button>
 					</div>
 				</div>
+				<div class="copied" id="copied-noticias" style="display: none;">
+					El código se copió correctamente, ¡ahora pegalo en la consola!
+				</div>
 			</div>
 			<div class="footer" id="footer-noticias">
 				Siguiente
@@ -177,6 +184,9 @@
 					<div class="code-footer">
 						<button class="code-copy-button" id="copy-facebook" data-clipboard-text="Copy Me!">Copiar al portapapeles</button>
 					</div>
+				</div>
+				<div class="copied" id="copied-facebook" style="display: none;">
+					El código se copió correctamente, ¡ahora pegalo en la consola!
 				</div>
 			</div>
 			<div class="footer" id="footer-facebook">
@@ -209,7 +219,9 @@
 					<div class="code-footer">
 						<button class="code-copy-button" id="copy-facebookfotos" data-clipboard-text="Copy Me!">Copiar al portapapeles</button>
 					</div>
-
+				</div>
+				<div class="copied" id="copied-facebookfotos" style="display: none;">
+					El código se copió correctamente, ¡ahora pegalo en la consola!
 				</div>
 			</div>
 			<div class="footer" id="footer-facebookfotos">
@@ -242,6 +254,9 @@
 						</div>
 
 					</div>
+				<div class="copied" id="copied-gravity" style="display: none;">
+					El código se copió correctamente, ¡ahora pegalo en la consola!
+				</div>
 				</div>
 				<div class="footer" id="footer-gravity">
 				Siguiente
@@ -273,6 +288,9 @@
 						</div>
 
 					</div>
+				<div class="copied" id="copied-twitter" style="display: none;">
+					El código se copió correctamente, ¡ahora pegalo en la consola!
+				</div>
 				</div>
 				<div class="footer" id="footer-twitter">
 				Siguiente
@@ -316,6 +334,9 @@
 							<button class="code-copy-button" id="copy-fart" data-clipboard-text="Copy Me!">Copiar al portapapeles</button>
 						</div>
 
+					</div>
+					<div class="copied" id="copied-fart" style="display: none;">
+						El código se copió correctamente, ¡ahora pegalo en la consola!
 					</div>
 				</div>
 				<div class="footer" id="footer-fart">
