Added backwards ! to the news script

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 						<span title="Conseguimos la foto de la noticia.">var foto = nota.getElementsByTagName("img")[0];</span><br>
 						<span title="Cambiamos la direccion de la foto por la de SRC.">foto.src = SRC;</span><br>
 						<span title="Conseguimos el pie de pagina.">var pie = nota.getElementsByTagName("a")[2];</span><br>
-						<span title="Cambiamos el pie de pagina.">pie.innerHTML = NOMBRE + " visita el Departamento de Computaci&oacute;n!";</span><br>
+						<span title="Cambiamos el pie de pagina.">pie.innerHTML = "¡" + NOMBRE + " visita el Departamento de Computaci&oacute;n!";</span><br>
 						<span title="Conseguimos el texto de la noticia.">var texto = nota.getElementsByTagName("a")[6];</span><br>
-						<span title="Cambiamos el texto de la noticia.">texto.innerHTML = NOMBRE + " visit&oacute; la Semana de la Computaci&oacute;n y le encant&oacute;! :D";</span><br>
+						<span title="Cambiamos el texto de la noticia.">texto.innerHTML = "¡" + NOMBRE + " visit&oacute; la Semana de la Computaci&oacute;n y le encant&oacute;! :D";</span><br>
 					</div>
 
 					<div class="code-footer">
