Fixed twitter js code

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 							C&oacute;digo Javascript
 						</div>
 						<div class="code-content">
-							document.getElementsByClassName("ProfileTweet-text js-tweet-text u-dir")[0].innerHTML = "Aguante la Semana de la Computaci&oacute;n!";
+							document.getElementsByClassName("js-tweet-text tweet-text")[0].innerHTML = "Aguante la Semana de la Computaci&oacute;n!";
 						</div>
 						<div class="code-footer">
 							<button class="code-copy-button" id="copy-twitter" data-clipboard-text="Copy Me!">Copiar al portapapeles</button>
