Changed photo url in the news code

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						C&oacute;digo Javascript
 					</div>
 					<div class="code-content">
-						<span title="Localizacion de la imagen a usar."> var SRC = "http://www.dinosoria.com/tiger/tigre_sumatracc01.jpg";</span><br>
+						<span title="Localizacion de la imagen a usar."> var SRC = "http://divulga.exp.dc.uba.ar/~divus/imgs/dcphoto.png";</span><br>
 						<span title="Tu nombre."> var NOMBRE = "Tu nombre"; </span> <br>
 						<span title="Conseguimos la primera noticia."> var nota = document.body.getElementsByClassName("nota")[0]; </span><br>
 						<span title="Conseguimos la foto de la noticia.">var foto = nota.getElementsByTagName("img")[0];</span><br>
