Se descomenta url y se arregla referencia.

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ loadScript("https://rawgit.com/theonion/fartscroll.js/master/fartscroll.js", loa
 					</div>
 				</div>
 			</div>
-			<!--Para descubrir un poco m&aacute;s <a href="url">http://elgoog.im/</a>-->
+			Para descubrir un poco m&aacute;s <a href="http://elgoog.im/">http://elgoog.im/</a>
 		</div>
 	</div>
 
